Added various yml files and updated git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,11 @@
 /.bundle
 
 # Ignore certain config files
-/config/*.yml
+config/blazing.rb
+config/mongoid.yml
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
