--- a/config/mongoid.yml.example
+++ b/config/mongoid.yml.example
@@ -5,7 +5,7 @@ development:
     default:
       # Defines the name of the default database that Mongoid can connect to.
       # (required).
-      database: web_content_db_dev
+      database: db_name
       # Provides the hosts the default session can connect to. Must be an array
       # of host:port pairs. (required)
       hosts:
